# pandigital

./: LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt  build.bat  build.sh  calc_result.h  main.cpp  pandigital_avx2.cpp  pandigital_avx2_advanced.cpp  pandigital_avx512.cpp  pandigital_simd.cpp  pandigital_simple.cpp  readme.md
matlab/: pandigital.m  pandigital_vectorized_full.m  vectorized_pandigital.m
